--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -448,6 +448,297 @@ body{
                 }
             }
         }
+        .leave-requests-component{
+            display: flex;
+            flex-direction: column;
+            .component-title-row{
+                display: flex;
+                justify-content: space-between;
+                .component-title{
+                    color: #FFF;
+                    font-family: Urbanist;
+                    font-size: 28px;
+                    font-style: normal;
+                    font-weight: 700;
+                    line-height: 125%;
+                }
+                .request-view-type-buttons-component{
+                    display: flex;
+                    align-items: center;
+                    gap: 10px;
+                    .list-view,.month-view{
+                        cursor: pointer;
+                        border: none;
+                        color: #898989;
+                        font-family: Urbanist;
+                        font-size: 15px;
+                        font-style: normal;
+                        font-weight: 400;
+                        line-height: 140%; /* 21px */
+                        background: #272727;
+                        width: 120px;
+                        height: 40px;
+                        display: flex;
+                        justify-content: center;
+                        align-items: center;
+
+                    }
+                    .list-view{
+                        border-top-left-radius: 16px;
+                        border-bottom-left-radius: 16px;
+                    }
+                    .month-view{
+                        border-top-right-radius: 16px;
+                        border-bottom-right-radius: 16px;
+                    }
+                    .active {
+                        color: #FFF !important;
+                        font-weight: 700 !important;
+                        background: #6E56E0 !important;
+
+                    }
+                }
+            }
+            .component-row{
+                display: flex;
+                align-items: flex-start;
+                gap: 18px;
+                .heatmap-component{
+                    background: #1E1E1E;
+                    flex: 1;
+                    border-radius: 8px;
+                    overflow: hidden;
+                    .header-row{
+                        background: transparent;
+                        display: flex;
+                        justify-content: space-between;
+                        border-bottom: solid 2px #272727;
+                        padding: 16px 16px 10px 24px;
+                        .component-title{
+                            color: #FFF;
+                            text-align: center;
+                            font-family: Urbanist;
+                            font-size: 16px;
+                            font-style: normal;
+                            font-weight: 600;
+                            line-height: 100%;
+                            margin: 0px;
+                        }
+                        .drodowns-component{
+                            display: flex;
+                            align-items: center;
+                            select {
+                                background-color: transparent;
+                                border: none;
+                                color: #898989;
+                                text-align: center;
+                                font-family: Urbanist;
+                                font-size: 15px;
+                                font-style: normal;
+                                font-weight: 400;
+                                line-height: 100%; /* 15px */
+                                text-transform: uppercase;
+                            }
+                            select:active{
+                                outline: none;
+                            }
+                        }
+                    }
+                    .week-days-row{
+                        padding: 10px 16px 10px 24px;
+                        overflow: hidden;
+                        .days-list{
+                            display: flex;
+                            list-style: none;
+                            border:solid 1px #272727;
+                            border-radius: 8px;
+                            overflow: hidden;
+                            padding: 0px;
+                            .day-list-item{
+                                flex:1;
+                                border-right: solid 1px #272727;
+                                padding: 10px;
+                                text-align: center;
+                                cursor: pointer;
+                            }
+                            .active-day{
+                                background: #C33535;
+                            }
+                        }
+                        
+                    }
+                    .data-row{
+                        display: flex;
+                        justify-content: space-between;
+                        padding: 10px 16px 10px 24px;
+                        .leave-requests-table{
+                            min-width: 100%;
+                            // .table-head{
+                            //     padding: 10px;
+                            // }
+                            .table-head-row {
+                                border-radius: 8px;
+                                background-color: #272727;
+                                padding: 12px 20px;
+                                display: flex;
+
+                            }
+                            .table-head-row,.table-body-row{
+                                td {
+                                    .sort-icon {
+                                        margin-left: 10px;
+                                    }
+                                }
+                                .check-col{
+                                    width: 5%;
+                                    input[type=checkbox] {
+                                        margin-right: 10px;
+                                    }
+                                }
+                                .name-col{
+                                    width: 35%;
+                                }
+                                .days-col{
+                                    width: 10%;
+                                }
+                                .leave-col{
+                                    width: 15%;
+                                }
+                                .actions-col{
+                                    width: 35%;
+                                }
+                            }
+                        }
+                    }
+                    .component-footer{
+                        padding: 16px 16px 16px 24px;
+                        border-top: solid 2px #272727;
+                        p {
+                            margin: 0;
+                            color: #898989;
+                            text-align: center;
+                            font-family: Urbanist;
+                            font-size: 12px;
+                            font-style: normal;
+                            font-weight: 400;
+                            line-height: 100%; /* 12px */
+                            text-align: left;
+                        }
+                    }
+                }
+                .most-day-away-component{
+                    background: #1E1E1E;
+                    flex: 1;
+                    border-radius: 8px;
+                    overflow: hidden;
+                    .header-row{
+                        background: transparent;
+                        display: flex;
+                        justify-content: space-between;
+                        border-bottom: solid 2px #272727;
+                        padding: 16px 16px 10px 24px;
+                        .component-title{
+                            color: #FFF;
+                            text-align: center;
+                            font-family: Urbanist;
+                            font-size: 16px;
+                            font-style: normal;
+                            font-weight: 600;
+                            line-height: 100%;
+                            margin: 0px;
+                        }
+                        .drodowns-component{
+                            display: flex;
+                            align-items: center;
+                            select {
+                                background-color: transparent;
+                                border: none;
+                                color: #898989;
+                                text-align: center;
+                                font-family: Urbanist;
+                                font-size: 15px;
+                                font-style: normal;
+                                font-weight: 400;
+                                line-height: 100%; /* 15px */
+                                text-transform: uppercase;
+                            }
+                            select:active{
+                                outline: none;
+                            }
+                        }
+                    }
+                    .data-component{
+                        min-height: 298px;
+                        padding: 10px 16px 10px 24px;
+                        .most-day-away-list{
+                            list-style: none;
+                            padding: 0px;
+                            .most-day-away-list-item{
+                                display: flex;
+                                justify-content: space-between;
+                                margin-bottom: 15px;
+                                .user-name-pic{
+                                    display: flex;
+                                    align-items: center;
+                                    gap: 16px;
+                                    .user-name{
+                                        margin: 0px;
+                                        overflow: hidden;
+                                        color: #898989;
+                                        text-overflow: ellipsis;
+                                        white-space: nowrap;
+                                        font-family: Inter;
+                                        font-size: 14px;
+                                        font-style: normal;
+                                        font-weight: 400;
+                                        line-height: 20px; /* 142.857% */
+                                    }
+                                }
+                                .away-days-info{
+                                    color: #FFF;
+                                    font-family: Inter;
+                                    font-size: 14px;
+                                    font-style: normal;
+                                    font-weight: 400;
+                                    line-height: 20px; /* 142.857% */
+                                }
+                            }
+                        }
+                    }
+                    .component-footer{
+                        padding: 16px 16px 16px 24px;
+                        border-top: solid 2px #272727;
+                        p {
+                            margin: 0;
+                            color: #898989;
+                            text-align: center;
+                            font-family: Urbanist;
+                            font-size: 12px;
+                            font-style: normal;
+                            font-weight: 400;
+                            line-height: 100%; /* 12px */
+                            text-align: left;
+                        }
+                    }
+                }
+                .avatar-component{
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+                    position: relative;
+                }
+                .avatar-component::after{
+                    content: '';
+                    width: 8px;
+                    height: 8px;
+                    border-radius: 50%;
+                    background: #FFD928;
+                    position: absolute;
+                    top: 0px;
+                    right: -20px;
+                }
+            }
+        }
         /*--------------------------------------------Notifications Component--------------------------------------------*/
         .notifications-component{
             width: 464px;
