top-bar:logo fixed

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -17,7 +17,8 @@ body{
     z-index: 1;
     .logo-wrapper{
         padding: 20px 16px 20px 0;
-        width: 240px;
+        // width: 240px;
+        width: 200px;
         display: flex;
         align-items: center;
         justify-content: space-between;
